office work done

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </section>
-      <section style="margin-top: 200px">
+      <section class="compannys-section">
         <hr class="hrr" />
         <div class="copannys-parent">
           <div class="copannys-child">
