--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </div>
         </div>
       </nav>
-      <section>
-        <div class="banner-section">
+      <section class="banner-section">
+   
           <div class="banner-1">
             <h1>Start your Journey as Influencer</h1>
             <p>
@@ -38,15 +38,12 @@
             </p>
             <button class="banner-btn">Preebook now</button>
           </div>
+
           <div class="banner-2">
-            <div class="circle">
-              <img src="images/Circle design.svg" alt="" />
-            </div>
-            <div class="camera">
-              <img src="images/main-camera.png" alt="" />
-            </div>
+              <img class="circle" src="images/Circle design.svg" alt="" />
+              <img class="camera" src="images/main-camera.png" alt="" />
           </div>
-        </div>
+        
       </section>
       <section class="compannys-section">
         <hr class="hrr" />
@@ -221,11 +218,29 @@
               </div>
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
+            <div class="popular-child">
+              <img src="images/tripod.png" alt="" />
+              <h2>Flex Tripod</h2>
+              <h3>$50.48</h3>
+              <div class="reting-parent">
+                <div class="Start">
+                  <i class="fa-regular fa-star color"></i>
+                  <i class="fa-regular fa-star color"></i>
+                  <i class="fa-regular fa-star color"></i>
+                  <i class="fa-regular fa-star color"></i>
+                  <i class="fa-regular fa-star empty"></i>
+                </div>
+                <div class="text">4.99</div>
+              </div>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="seemore">
+            <a  href="">
+              seemore<i class="fa-solid fa-arrow-right"></i>
+            </a>
           </div>
 
-          <a class="seemore" href="">
-            seemore<i class="fa-solid fa-arrow-right"></i>
-          </a>
         </section>
 
         <section class="footer-sec">
